--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "11.1.5",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
+    "fs-extra": "^10.0.0",
     "next": "latest",
     "next-i18next": "^8.5.1",
     "next-images": "^1.8.1",
