--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-i18next": "^8.5.1",
     "next-images": "^1.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
