--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,5 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": [
-    "Chakra",
-    "allowtransparency"
-  ]
+  "cSpell.words": ["Chakra", "allowtransparency", "forex"]
 }
