--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "latest",
     "next-i18next": "^8.5.1",
     "next-images": "^1.8.1",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
