--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "fs-extra": "^10.0.0",
@@ -22,7 +24,8 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-query": "^3.18.1"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
