--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "next start",
     "locales": "npx prettier --write ./src/i18n/**/*.json"
   },
   "dependencies": {
