--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.18.1",
+    "react-reveal": "^1.2.2",
     "standard-version": "^9.3.1",
     "winston": "^3.3.3"
   },
