--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "standard-version": "^9.3.1",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
