--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "fs-extra": "^10.0.0",
-    "next": "latest",
+    "next": "12.0.1",
     "next-i18next": "^8.5.1",
     "next-images": "^1.8.1",
     "nprogress": "^0.2.0",
