style(financialnews): modify api url

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_API_URL=https://www.wc012.com/api/
 
+NEXT_PUBLIC_JS_API_URL=https://echo-and-more.herokuapp.com/api/news
+
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-KD6MTWT
