--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NEXT_PUBLIC_API_URL=https://www.wc012.com/api/
 NEXT_PUBLIC_JS_API_URL=https://newsapi.012wcg.com/api/
 
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-KD6MTWT
+
+NEXT_PUBLIC_EMAIL=cs@wcgmarkets.com
