refactor(formattime): modify formatTimestamp, homepage, formatLang

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_API_URL=https://www.wc012.com/api/
 
-NEXT_PUBLIC_JS_API_URL=https://newsapi.012wcg.com/api/
+NEXT_PUBLIC_JS_API_URL=http://newsapi.012wenchuan.com/api/
 
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-KD6MTWT
 
