--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.5",
-    "@chakra-ui/react": "^1.4.2",
-    "@chakra-ui/theme-tools": "1.1.2",
-    "@emotion/react": "11.1.5",
-    "@emotion/styled": "11.1.5",
-    "axios": "^0.21.1",
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.8.1",
+    "@chakra-ui/theme-tools": "^1.3.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "axios": "^0.25.0",
     "formik": "^2.2.9",
-    "framer-motion": "^4.0.3",
+    "framer-motion": "^5.6.0",
     "fs-extra": "^10.0.0",
     "next": "11.1.2",
-    "next-i18next": "^8.5.1",
-    "next-images": "^1.8.1",
+    "next-i18next": "^10.2.0",
+    "next-images": "^1.8.4",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.3.1",
     "standard-version": "^9.3.1",
     "yup": "^0.32.9"
   },
@@ -36,14 +36,14 @@
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.30.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.0.9",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.28.0",
     "husky": "^4.3.8",
     "lint-staged": "^12.2.0",
-    "prettier": "^2.3.2",
-    "typescript": "4.3.2"
+    "prettier": "^2.5.1",
+    "typescript": "~4.4.4"
   },
   "license": "MIT",
   "husky": {
