--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "locales": "npx prettier --write ./src/i18n/**/*.json",
     "release": "standard-version"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.8.1",
-    "@chakra-ui/theme-tools": "^1.3.1",
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
+    "@chakra-ui/theme-tools": "^1.3.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "axios": "^0.25.0",
@@ -26,22 +27,22 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "standard-version": "^9.3.1",
-    "yup": "^0.32.9"
+    "standard-version": "^9.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^12.0.9",
+    "eslint-config-next": "^12.0.10",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^4.3.8",
-    "lint-staged": "^12.2.0",
+    "lint-staged": "^12.3.3",
     "prettier": "^2.5.1",
     "typescript": "~4.4.4"
   },
