--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "wcg-markets",
   "version": "1.12.0",
+  "engines": {
+    "node": "^14.17.0",
+    "npm": "^6.14.13"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
