--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 NEXT_PUBLIC_API_URL= http://dbapi.012wcgintl.com/api
 
+NEXT_PUBLIC_REGISTER_REAL=https://my.wcgmarkets.com/register
+
+NEXT_PUBLIC_USERS_CENTER=https://my.wcgmarkets.com/login
+
+NEXT_PUBLIC_USERS_CENTER_ZH=https://my.wcgmarkets.com/zh/login
+
+NEXT_PUBLIC_IB_CENTER=https://my.wcgmarkets.com/
+
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-KD6MTWT
