feat(introductionvideo): add English video, modify .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL= http://dbapi.012wcgintl.com/api
+NEXT_PUBLIC_API_URL= https://dbapi.012wcgintl.com/api
 
 NEXT_PUBLIC_REGISTER_REAL=https://my.wcgmarkets-global.com/register
 
