--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
     "@chakra-ui/theme-tools": "^1.3.6",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.27.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "framer-motion": "^5.6.0",
     "fs-extra": "^10.1.0",
     "next": "11.1.2",
-    "next-i18next": "^11.0.0",
+    "next-i18next": "^11.3.0",
     "next-images": "^1.8.4",
     "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "^14.6.0",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@types/node": "^18.6.3",
+    "@types/react": "18.0.1",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "husky": "^4.3.8",
-    "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2",
-    "standard-version": "^9.3.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "standard-version": "^9.5.0",
     "typescript": "~4.4.4"
   },
   "license": "MIT",
