--- a/package.json
+++ b/package.json
@@ -15,40 +15,39 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "^1.8.8",
-    "@chakra-ui/theme-tools": "^1.3.6",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@chakra-ui/icons": "^2.0.10",
+    "@chakra-ui/react": "^2.3.4",
+    "@chakra-ui/theme-tools": "^2.0.11",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
-    "framer-motion": "^5.6.0",
+    "framer-motion": "^7.3.6",
     "fs-extra": "^10.1.0",
-    "next": "11.1.2",
-    "next-i18next": "^12.0.0",
-    "next-images": "^1.8.4",
+    "next": "^12.3.1",
+    "next-i18next": "^12.0.1",
     "nprogress": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "^18.7.13",
-    "@types/react": "18.0.1",
+    "@types/node": "^18.7.21",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^12.1.5",
+    "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.0",
+    "eslint-plugin-react": "^7.31.8",
     "husky": "^4.3.8",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "standard-version": "^9.5.0",
-    "typescript": "~4.4.4"
+    "typescript": "4.4.4"
   },
   "license": "MIT",
   "husky": {
