refactor(url): modify mt4App URL

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ NEXT_PUBLIC_USERS_CENTER_ZH=https://my.wcgmarkets-global.com/zh/login
 
 NEXT_PUBLIC_IB_CENTER=https://my.wcgmarkets-global.com
 
-NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/17749/mt4/wenchuangloballtd4setup.exe
+NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/asa.group.trading/mt4/asa4setup.exe
 
 NEXT_PUBLIC_MT4_APK=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk?utm_source=www.metatrader4.com&utm_campaign=install.metaquotes
 
