refactor(menulist): add .env: NEXT_PUBLIC_MT4_WEB and menuList:MT4 Web Trader

--- a/.env
+++ b/.env
@@ -12,4 +12,6 @@ NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/asa.group.trading/mt4/asa4
 
 NEXT_PUBLIC_MT4_APK=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk?utm_source=www.metatrader4.com&utm_campaign=install.metaquotes
 
+NEXT_PUBLIC_MT4_WEB=https://trade.asawcgm.com/
+
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-KD6MTWT
