--- a/package.json
+++ b/package.json
@@ -15,37 +15,39 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.11",
-    "@chakra-ui/react": "^2.3.7",
-    "@chakra-ui/theme-tools": "^2.0.12",
+    "@chakra-ui/icons": "^2.0.12",
+    "@chakra-ui/react": "^2.4.1",
+    "@chakra-ui/theme-tools": "^2.0.13",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "axios": "^1.1.3",
+    "axios": "^1.2.0",
     "formik": "^2.2.9",
-    "framer-motion": "^7.6.5",
+    "framer-motion": "^7.6.12",
     "fs-extra": "^10.1.0",
-    "next": "^13.0.2",
-    "next-i18next": "^12.1.0",
+    "i18next": "^22.0.6",
+    "next": "^13.0.5",
+    "next-i18next": "^13.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^13.0.2",
+    "eslint-config-next": "^13.0.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.31.11",
     "husky": "^4.3.8",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "standard-version": "^9.5.0",
     "typescript": "4.4.4"
   },
