--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ NEXT_PUBLIC_API_URL= https://dbapi.012wcgintl.com/api
 
 NEXT_PUBLIC_REGISTER_REAL=https://my.wcgmarkets-global.com/register
 
-NEXT_PUBLIC_USERS_CENTER=https://my.wcgmarkets-global.com/login
+NEXT_PUBLIC_REGISTER_ZH=https://my.wcgmarkets-global.com/zh/register
 
-NEXT_PUBLIC_USERS_CENTER_ZH=https://my.wcgmarkets-global.com/zh/login
+NEXT_PUBLIC_USERS_CENTER=https://my.wcgmarkets-global.com/login
 
 NEXT_PUBLIC_IB_CENTER=https://my.wcgmarkets-global.com
 
