--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcg-markets",
-  "version": "1.32.1",
+  "version": "1.32.3",
   "engines": {
     "node": "^14.17.0",
     "npm": "^6.14.13"
@@ -15,41 +15,41 @@
     "release": "standard-version"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.16",
-    "@chakra-ui/react": "^2.4.8",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.1",
     "@chakra-ui/theme-tools": "^2.0.16",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "axios": "^1.2.2",
+    "axios": "^1.3.3",
     "formik": "^2.2.9",
-    "framer-motion": "^8.4.2",
+    "framer-motion": "^9.0.3",
     "fs-extra": "^11.1.0",
     "i18next": "^22.4.9",
-    "next": "^13.1.2",
-    "next-i18next": "^13.0.3",
+    "next": "^13.1.6",
+    "next-i18next": "^13.1.5",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.4",
+    "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
-    "yup": "^0.32.11"
+    "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "^13.1.2",
+    "eslint": "^8.34.0",
+    "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react": "^7.32.2",
     "husky": "^4.3.8",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.2",
+    "lint-staged": "^13.1.2",
+    "prettier": "^2.8.4",
     "standard-version": "^9.5.0",
-    "typescript": "4.4.4"
+    "typescript": "^4.9.5"
   },
   "license": "MIT",
   "husky": {
