--- a/.env
+++ b/.env
@@ -1,12 +1,18 @@
 NEXT_PUBLIC_API_URL= https://cms.wcgos.com/api
 
-NEXT_PUBLIC_REGISTER_REAL=https://my.wcgmarkets-global.com/register
+NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-asia.com/register/trader/multi-step
+
+NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo?link_id=fc9djea3
 
 NEXT_PUBLIC_REGISTER_ZH=https://my.wcgmarkets-global.com/zh/register
 
 NEXT_PUBLIC_USERS_CENTER=https://my.wcgmarkets-global.com/login
 
+NEXT_PUBLIC_USERS_CENTER_NEW=https://my.wcgmarkets-global.com/login
+
 NEXT_PUBLIC_IB_CENTER=https://my.wcgmarkets-global.com
+
+NEXT_PUBLIC_IB_CENTER_NEW=https://my.wcgmarkets-global.com
 
 NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/asa.group.trading/mt4/asa4setup.exe
 
