--- a/.env
+++ b/.env
@@ -4,15 +4,15 @@ NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-asia.com/register/trad
 
 NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo?link_id=fc9djea3
 
-NEXT_PUBLIC_REGISTER_ZH=https://my.wcgmarkets-global.com/zh/register
+NEXT_PUBLIC_REGISTER_ZH=https://clientportal.wcgmarkets-asia.com/register/trader/multi-step
 
 NEXT_PUBLIC_USERS_CENTER=https://my.wcgmarkets-global.com/login
 
-NEXT_PUBLIC_USERS_CENTER_NEW=https://my.wcgmarkets-global.com/login
+NEXT_PUBLIC_USERS_CENTER_NEW=https://clientportal.wcgmarkets-asia.com/
 
 NEXT_PUBLIC_IB_CENTER=https://my.wcgmarkets-global.com
 
-NEXT_PUBLIC_IB_CENTER_NEW=https://my.wcgmarkets-global.com
+NEXT_PUBLIC_IB_CENTER_NEW=https://clientportal.wcgmarkets-asia.com/
 
 NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/asa.group.trading/mt4/asa4setup.exe
 
