--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL= https://cms.wcgos.com/api
+NEXT_PUBLIC_API_URL= https://cms.wcgmarkets-global.com/api
 
 NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-asia.com/register/trader/multi-step
 
