--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo
 
 NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-asia.com/
 
-NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/asa.group.trading/mt4/asa4setup.exe
+NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
 
 NEXT_PUBLIC_MT4_APK1=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk?utm_source=www.metatrader4.com&utm_campaign=install.metaquotes
 
