--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-asia.com/register/trad
 
 NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo?link_id=fc9djea3
 
-NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-asia.com/
+NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-sy.com/login
 
 NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
 
