refactor(many): update .env, package.json, link.ts, menuList.ts, README.md, delete unused page

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 NEXT_PUBLIC_API_URL= https://cms.wcgmarkets-global.com/api
 
-NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-asia.com/register/trader?link_id=dsnpsip4
+NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-max.com/register/trader/multi-step?link_id=dsnpsip4
 
-NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo?link_id=fc9djea3
+NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-max.com/register/demo?link_id=qqod20vx
 
-NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-sy.com/login
+NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-max.com/
 
-NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
+NEXT_PUBLIC_MT4_APP=https://image.wcgmarkets.com/wcggroupltd4setup.exe
 
-NEXT_PUBLIC_MT4_APK1=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk?utm_source=www.metatrader4.com&utm_campaign=install.metaquotes
+NEXT_PUBLIC_MT4_APK1=https://image.wcgmarkets.com/metatrader4.apk
 
 NEXT_PUBLIC_MT4_APK2=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk
 
