--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL= https://cms.wcgmarkets-global.com/api
+NEXT_PUBLIC_API_URL=https://test-api.wcgmarkets.com/api
 
 NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-max.com/register/trader/multi-step?link_id=dsnpsip4
 
@@ -6,9 +6,9 @@ NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-max.com/register/demo?
 
 NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-max.com/
 
-NEXT_PUBLIC_MT4_APP=https://image.wcgmarkets.com/wcggroupltd4setup.exe
+NEXT_PUBLIC_MT4_APP=https://wcg-data.wcgmarkets.com/wcggroupltd4setup.exe
 
-NEXT_PUBLIC_MT4_APK1=https://image.wcgmarkets.com/metatrader4.apk
+NEXT_PUBLIC_MT4_APK1=https://wcg-data.wcgmarkets.com/metatrader4.apk
 
 NEXT_PUBLIC_MT4_APK2=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk
 
