--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=https://test-api.wcgmarkets.com/api
+NEXT_PUBLIC_API_URL=https://cms.wcgmarkets.com/api
 
 NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-max.com/register/trader/multi-step?link_id=dsnpsip4
 
