feat(nav): vi lang add nav depositBonus, update README, .env, links.ts, etc, add pdf file to AWS S3

--- a/.env
+++ b/.env
@@ -12,6 +12,8 @@ NEXT_PUBLIC_MT4_APK1=https://wcg-data.wcgmarkets.com/metatrader4.apk
 
 NEXT_PUBLIC_MT4_APK2=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk
 
+NEXT_PUBLIC_VI_DEPOSIT_BONUS=https://wcg-data.wcgmarkets.com/wcg_deposit_bonus.pdf
+
 NEXT_PUBLIC_MT4_WEB=https://trade.asawcgm.com/
 
 NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID=GTM-KD6MTWT
