--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "npm": "^10.5.0"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 3800",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3800",
     "lint": "next lint",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "locales": "npx prettier --write ./src/i18n/**/*.json",
