--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 NEXT_PUBLIC_API_URL=https://cms.wcgmarkets.com/api
 
-NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-vip.com/register/trader/multi-step?link_id=dsnpsip4
+NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgprime.co/register/trader/multi-step?link_id=dsnpsip4
 
-NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-vip.com/register/demo?link_id=qqod20vx
+NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo?link_id=qqod20vx
 
-NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-vip.com/
+NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgprime.co/
 
-NEXT_PUBLIC_MT4_APP=https://wcg-data.wcgmarkets.com/wcggroupltd4setup.exe
+NEXT_PUBLIC_MT4_APP=https://download.metatrader.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
 
 NEXT_PUBLIC_MT4_APK1=https://wcg-data.wcgmarkets.com/metatrader4.apk
 
