refactor(links): update links

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NEXT_PUBLIC_API_URL=https://cms.wcgmarkets.com/api
 
-NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgprime.co/register/trader/multi-step?link_id=dsnpsip4
+NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-fx.com/register/trader?link_id=dsnpsip4
 
-NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-asia.com/register/demo?link_id=qqod20vx
+NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-fx.com/register/demo?link_id=qqod20vx
 
 NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgprime.co/
 
