--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-fx.com/register/trader
 
 NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-fx.com/register/demo?link_id=qqod20vx
 
-NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgprime.co/
+NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-fx.com
 
 NEXT_PUBLIC_MT4_APP=https://download.metatrader.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
 
