--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-fx.com/register/demo?l
 
 NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-fx.com
 
-NEXT_PUBLIC_MT4_APP=https://download.metatrader.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
+NEXT_PUBLIC_MT4_APP=https://wcg-data.wcgmarkets.com/wcggroupltd4setup.exe
 
 NEXT_PUBLIC_MT4_APK1=https://wcg-data.wcgmarkets.com/metatrader4.apk
 
