--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NEXT_PUBLIC_API_URL=https://cms.wcgmarkets.com/api
 
-NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-fx.com/register/trader?link_id=dsnpsip4
+NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-zh.com/register/trader/multi-step?link_id=dsnpsip4
 
-NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-fx.com/register/demo?link_id=qqod20vx
+NEXT_PUBLIC_REGISTER_DEMO=https://clientportal.wcgmarkets-zh.com/register/demo?link_id=qqod20vx
 
-NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-fx.com
+NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-zh.com/
 
 NEXT_PUBLIC_MT4_APP=https://wcg-data.wcgmarkets.com/wcggroupltd4setup.exe
 
