--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-NEXT_PUBLIC_API_URL= https://cms.wcgos.com/api
+NEXT_PUBLIC_API_URL= https://cms.wcgmarkets.com/api
 
-NEXT_PUBLIC_REGISTER_REAL=https://my.wcgmarkets-global.com/register
+NEXT_PUBLIC_REGISTER_REAL=https://clientportal.wcgmarkets-zh.com/register/trader/multi-step?link_id=dsnpsip4
 
-NEXT_PUBLIC_REGISTER_ZH=https://my.wcgmarkets-global.com/zh/register
+NEXT_PUBLIC_REGISTER_ZH=https://clientportal.wcgmarkets-zh.com/register/trader/multi-step?link_id=dsnpsip4
 
-NEXT_PUBLIC_USERS_CENTER=https://my.wcgmarkets-global.com/login
+NEXT_PUBLIC_USERS_CENTER=https://clientportal.wcgmarkets-zh.com/
 
-NEXT_PUBLIC_IB_CENTER=https://my.wcgmarkets-global.com
+NEXT_PUBLIC_IB_CENTER=https://clientportal.wcgmarkets-zh.com/
 
-NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/asa.group.trading/mt4/asa4setup.exe
+NEXT_PUBLIC_MT4_APP=https://download.mql5.com/cdn/web/wcg.group.limited/mt4/wcggroupltd4setup.exe
 
-NEXT_PUBLIC_MT4_APK=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk?utm_source=www.metatrader4.com&utm_campaign=install.metaquotes
+NEXT_PUBLIC_MT4_APK=https://download.mql5.com/cdn/web/metaquotes.software.corp/mt4/metatrader4.apk
 
 NEXT_PUBLIC_MT4_WEB=https://trade.asawcgm.com/
 
